--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -27,7 +27,7 @@
   width: 28px;
   height: 3px;
   margin: 0 0 5px 0;
-  background: #fff;
+  background: set-text-color($primary-color);
   transition: all 0.5s ease-out;
 }
 
@@ -118,7 +118,7 @@
     text-transform: uppercase;
     padding: 1rem 0;
     font-weight: 300;
-    color: #fff;
+    color: set-text-color($primary-color);
     text-decoration: none;
     @include easeOut();
 
