--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,9 +1,13 @@
 // Widescreens
 @include mediaXl {
+  .projects {
+    grid-template-columns: repeat (4, 1fr);
+  }
 }
 
 //Dekstops & Laptops
 @include mediaLg {
+  grid-template-columns: repeat (3, 1fr);
 }
 
 // Tablets & small laptops
@@ -55,10 +59,14 @@
 
     grid-template-columns: 1fr;
   }
+
+  grid-template-columns: repeat (3, 1fr)
 }
 
 // Smartphones
 @include mediaSm {
+
+  grid-template-columns; repeat (1, 1fr);
   main#home h1 {
     margin-top: 10vh;
   }
