--- a/scss/main.scss
+++ b/scss/main.scss
@@ -64,7 +64,7 @@ h3 {
 }
 
 a {
-  color: #fff;
+  color: set-text-color($primary-color);
   text-decoration: none;
 }
 
@@ -191,6 +191,46 @@ main {
   background: lighten($primary-color, 5);
   padding: 0.5rem;
   border-bottom: $secondary-color 5px solid;
+}
+
+.projects {
+  display: grid;
+
+  grid-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr);
+
+  img {
+    width: 100%;
+    border: 3px#fff solid;
+
+    &:hover {
+      opacity: 0.5;
+      border-color: $secondary-color;
+      @include easeOut;
+    }
+  }
+}
+
+.btn {
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  margin-bottom: 0.3rem;
+  &:hover {
+    background: $secondary-color;
+    color: set-text-color($primary-color);
+  }
+}
+
+.btn-dark {
+  @extend.btn;
+  background: #105b63;
+  color: #fff;
+}
+
+.btn-light {
+  @extend.btn;
+  background: lighten($primary-color, $amount: 0);
 }
 
 #main-footer {
